@@ -7,6 +7,7 @@ lib/Test/Builder.pm
 lib/Test/More.pm
 lib/Test/Simple.pm
 lib/Test/Tutorial.pod
+t/00test_harness_check.t
 t/Builder.t
 t/More.t
 t/bad_plan.t
@@ -25,6 +26,7 @@ t/has_plan.t
 t/has_plan2.t
 t/import.t
 t/is_deeply.t
+t/lib/NoExporter.pm
 t/lib/Test/Simple/Catch.pm
 t/lib/Test/Simple/sample_tests/death.plx
 t/lib/Test/Simple/sample_tests/death_in_eval.plx
